--- a/app/src/main/res/layout/rv_item_archive_list.xml
+++ b/app/src/main/res/layout/rv_item_archive_list.xml
@@ -1,85 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
-    android:layout_width="match_parent" android:layout_height="179dp" android:background="#ffffff">
+    android:layout_width="match_parent" android:layout_height="180dp" android:background="#f9f9f9">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="169dp"
-        android:background="#ffffff">
+        android:layout_height="170dp"
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/tv_rv_item_archive_list_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="180dp"
-            android:layout_marginTop="32dp"
+            android:layout_toStartOf="@id/ibtn_rv_item_archive_list_scrap"
+            android:layout_marginStart="28dp"
+            android:layout_marginEnd="55dp"
+            android:layout_marginTop="30dp"
             android:text="린 브랜딩을 어떻게 시작해야 할까?"
-            android:textColor="#444444"
+            android:textColor="#000000"
             android:textSize="21sp"
-            android:fontFamily="@font/nanum_barungothic_light"/>
+            android:letterSpacing="-0.02"
+            android:lineSpacingExtra="7sp"
+            android:fontFamily="@font/nanum_barungothic_light"
+            android:includeFontPadding="false"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
+        <ToggleButton
+            android:id="@+id/ibtn_rv_item_archive_list_scrap"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:background="@drawable/toggle_btn_scrap"
+            android:textOff=""
+            android:textOn=""
+            android:checked="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginRight="28dp"
-            android:layout_marginTop="34dp">
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="20dp"/>
 
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_scrap"/>
-
-            <TextView
-                android:id="@+id/tv_rv_item_archive_list_scrap_num"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:text="350"
-                android:textSize="14sp"
-                android:textColor="#707070"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_alignEnd="@id/ibtn_rv_item_archive_list_scrap"
+            android:layout_alignStart="@id/tv_rv_item_archive_list_title"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="17dp"
-            android:layout_marginLeft="29dp">
+            android:layout_marginBottom="18dp">
 
-            <TextView
-                android:id="@+id/tv_rv_item_archive_list_article_num"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_rv_item_archive_list_category_list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="13"
-                android:textSize="14sp"
-                android:textColor="@color/soft_blue"
-                android:fontFamily="@font/nanum_square_bold"/>
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="3dp">
 
-            <TextView
+            </androidx.recyclerview.widget.RecyclerView>
+
+            <!-- 아티클 개수 부분 -->
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="개"
-                android:textSize="14sp"
-                android:textColor="@color/soft_blue"
-                android:fontFamily="@font/nanum_barungothic_bold"/>
+                android:orientation="horizontal"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="의 아티클이 큐레이팅되었습니다."
-                android:textSize="14sp"
-                android:textColor="@color/brown_grey"
-                android:fontFamily="@font/nanum_barungothic_regular"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="아티클 "
+                    android:textColor="#707070"
+                    android:textSize="14sp"
+                    android:fontFamily="@font/nanum_barungothic_regular"
+                    android:includeFontPadding="false"/>
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_rv_item_archive_list_article_num"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="13"
+                    android:textSize="14sp"
+                    android:fontFamily="@font/nanum_barungothic_bold"
+                    android:textColor="#4f80ff"
+                    android:includeFontPadding="false"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="개"
+                    android:textSize="14sp"
+                    android:fontFamily="@font/nanum_barungothic_bold"
+                    android:textColor="#4f80ff"
+                    android:includeFontPadding="false"/>
+
+            </LinearLayout>
+
+        </RelativeLayout>
 
     </RelativeLayout>
-
-
 
 </RelativeLayout>
