--- a/app/src/main/res/layout/rv_item_archive_list.xml
+++ b/app/src/main/res/layout/rv_item_archive_list.xml
@@ -12,6 +12,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toStartOf="@id/ibtn_rv_item_archive_list_scrap"
+            android:layout_alignParentStart="true"
             android:layout_marginStart="28dp"
             android:layout_marginEnd="55dp"
             android:layout_marginTop="30dp"
