--- a/app/src/main/res/layout/rv_item_category.xml
+++ b/app/src/main/res/layout/rv_item_category.xml
@@ -2,20 +2,24 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container_rv_item_category"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:background="@color/white_two"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
+    <!-- TODO 폰트가 변경되어서 19.7.4에 수정이 필요 -->
     <TextView
-        android:id="@+id/txt_child_category_name"
+        android:id="@+id/txt_rv_item_category_name"
         android:layout_width="wrap_content"
+
         android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
-        android:fontFamily="@font/nanumbarungothiclight"
-        tools:text="UX / UI"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginBottom="13dp"
         android:textColor="@color/black"
+        android:textSize="21sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="Design" />
 </androidx.constraintlayout.widget.ConstraintLayout>
