--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -28,6 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="87dp"
             android:layout_marginEnd="87dp"
+            android:layout_marginBottom="-5dp"
             android:src="@drawable/character"
             app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
             app:layout_constraintEnd_toEndOf="parent"
