--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="brown_grey">#9d9d9d</color>
     <color name="brownish_grey">#707070</color>
     <color name="white_two">#f9f9f9</color>
+    <color name="transparent">#00000000</color>
 
 </resources>
