--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -2,24 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_menu1"
-        android:icon="@drawable/tab_home_selected"
-        android:title="MENU1"
-        />
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/selector_tab_home"
+        android:title="" />
 
     <item
-        android:id="@+id/navigation_menu2"
-        android:icon="@drawable/tab_category"
-        android:title="MENU2" />
+        android:id="@+id/navigation_category"
+        android:icon="@drawable/selector_tab_category"
+        android:title="" />
 
     <item
-        android:id="@+id/navigation_menu3"
-        android:icon="@drawable/tab_notice"
-        android:title="MENU3" />
+        android:id="@+id/navigation_notice"
+        android:icon="@drawable/selector_tab_notice"
+        android:title="" />
 
     <item
-        android:id="@+id/navigation_menu4"
-        android:icon="@drawable/tab_profile"
-        android:title="MENU3" />
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/selector_tab_profile"
+        android:title="" />
 
 </menu>
